<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.desafiolatam.carcollectionv2.views.car.CarActivity">

    <com.github.siyamed.shapeimageview.CircularImageView
        android:id="@+id/carCiv"
        android:layout_marginTop="50dp"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        app:siBorderWidth="2dp"
        app:siBorderColor="@android:color/darker_gray"
        android:src="@mipmap/ic_directions_car_black_48dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:weightSum="2">

        <EditText
            android:id="@+id/brandEt"
            android:layout_marginTop="25dp"
            android:hint="@string/brand"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/modelEt"
            android:layout_marginTop="25dp"
            android:hint="@string/model"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="25dp"
                android:text="@string/year"/>
            <Spinner
                android:id="@+id/yearSpin"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:entries="@array/years">
            </Spinner>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="25dp"
                android:text="@string/body"/>

            <Spinner
                android:id="@+id/bodySpin"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:entries="@array/bodies">

            </Spinner>
        </LinearLayout>
    </LinearLayout>

    <CheckBox
        android:id="@+id/absCb"
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/abs"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <ImageButton
            android:id="@+id/saveBtn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:src="@mipmap/ic_save_black_48dp"
            android:background="@null"
            />

        <ImageButton
            android:id="@+id/deleteBtn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:src="@mipmap/ic_delete_forever_black_48dp"
            android:background="@null"
            android:visibility="gone"
            />

    </LinearLayout>



</LinearLayout>
